# PrASeguRed/src/main/java/co/edu/uniquindio/prasegured/dto/NotificacionRequest.java
@@ -1,0 +1,12 @@
+package co.edu.uniquindio.prasegured.dto;
+
+
+
+public record NotificacionRequest(
+    String usuarioId,
+    String titulo,
+    String categoria,
+    String contenido,
+    String reporteId
+
+) {}
